changed search results to render an h4 instead of h3 tag for game names also added overflow-wrap: break-word to prevent future long words from warping page width

--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -31,8 +31,9 @@
 @media only screen and (min-width: 600px) {
     .detailContainer{
         width: 50%;
-        margin: auto;
-        
-  }
-  
-  }
+        margin: auto;     
+    }
+}
+.gameBlock h4{
+    overflow-wrap: break-word;
+}
